--- a/photographer.html
+++ b/photographer.html
@@ -1,62 +1,95 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/photographer.css" rel="stylesheet" type="text/css">
     <!--Font Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    
+
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye - photographe </title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+        <img src="assets/images/logo.png" class="logo" />
     </header>
     <main id="main">
-      <div class="photograph-header">
-        <div class="photograph-header__content"></div>
-        <button class="contact_button">Contactez-moi</button>
-        <div class="photograph-header__img"></div>
-      </div>
-      <div class="medias-wrapper"></div>
+        <div class="photograph-header">
+            <div class="photograph-header__content"></div>
+            <button class="contact_button">Contactez-moi</button>
+            <div class="photograph-header__img"></div>
+        </div>
+        <div class="filter-dropdown">
+            <p class="filter-dropdown__label">Trier par </p>
+            <div class="select-wrapper">
+                <div class="select-wrapper__selected">Sélectionner une option</div>
+                <span class="select-wrapper__icon"><i class="fa-solid fa-chevron-up"></i></span>
+                <div id="options" class="hidden">
+                    <div data-value="popularity">Popularité</div>
+                    <div data-value="date">Date</div>
+                    <div data-value="title">Titre</div>
+                </div>
+            </div>
+        </div>
+        <div class="medias-wrapper"></div>
     </main>
     <div id="contact_modal">
-			<div class="modal">
-				<header class="modal-header">
-          <div class="modal-header__content">
-            <h2>Contactez-moi</h2>
-            <p class="name"></p>
-          </div>
-          <img src="assets/icons/close.svg" class="close-modal">
-        </header>
-				<form>
-					<div>
-						<label for="prenom">Prénom</label>
-						<input type="text" id="prenom" name="prenom">
-					</div>
-          <div>
-            <label for="nom">Nom</label>
-            <input type="text" id="nom" name="nom">
-          </div>
-          <div>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email">
-          </div>
-          <div>
-            <label for="message">Votre message</label>
-            <textarea id="message" name="message"></textarea>
-          </div>
-          <input type="submit" class="contact_button" value="Envoyer">
-				</form>
-			</div>
-		</div>
+        <div class="modal">
+            <header class="modal-header">
+                <div class="modal-header__content">
+                    <h2>Contactez-moi</h2>
+                    <p id="name"></p>
+                </div>
+                <img src="assets/icons/close.svg" class="close-modal">
+            </header>
+            <form>
+                <div>
+                    <label for="prenom">Prénom</label>
+                    <input type="text" id="prenom" name="prenom">
+                </div>
+                <div>
+                    <label for="nom">Nom</label>
+                    <input type="text" id="nom" name="nom">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div>
+                    <label for="message">Votre message</label>
+                    <textarea id="message" name="message"></textarea>
+                </div>
+                <input type="submit" class="contact_button" value="Envoyer">
+            </form>
+        </div>
+    </div>
+    <div id="lightbox" role="dialog">
+        <div class="lightbox__modal">
+            <div class="lightbox__content" aria-label="vue zoomé du media">
+                <div class="lightbox__content-close-btn" aria-label="Bouton de fermeture de la boîte de dialogue">
+                    <i class="fa-solid fa-xmark lightbox__content-close-btn--icon"></i>
+                </div>
+                <div id="previousBtn" aria-label="Affichage du média précédent">
+                    <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <div class="lightbox__content-media"></div>
+                <div id="nextBtn" aria-label="Affichage du média suivant">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
     <script type="module" src="/scripts/pages/photographer.js"></script>
     <script type="module" src="/scripts/utils/contactForm.js"></script>
-  </body>
+    <script type="module" src="/scripts/utils/filter.js"></script>
+    <script type="module" src="/scripts/utils/lightbox.js"></script>
+</body>
+
 </html>
