add like button handling and stickbar

--- a/photographer.html
+++ b/photographer.html
@@ -86,6 +86,8 @@
             </div>
         </div>
     </div>
+    <div id="stickbar"></div>
+
     <script type="module" src="/scripts/pages/photographer.js"></script>
     <script type="module" src="/scripts/utils/contactForm.js"></script>
     <script type="module" src="/scripts/utils/filter.js"></script>
