--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+
+<head>
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-        <img src="assets/images/logo.png" class="logo" alt="fisheye logo">
+        <a href="index.html">
+            <img src="assets/images/logo.png" class="logo" alt="Fisheye home page">
+        </a>
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
         <div class="photographer_section"></div>
     </main>
-    <!--
-    <script src="scripts/templates/photographer.js"></script>
-    -->
     <script type="module" src="scripts/pages/index.js"></script>
-  </body>
+</body>
+
 </html>
