fixing w3c (html and css) and wcag (AA) issue, rename assets folders, refactoring

--- a/photographer.html
+++ b/photographer.html
@@ -32,7 +32,7 @@
             <label for="listbox-dropdown">Trier par </label>
             <div class="select-container">
                 <div class="select-container__icon-wrapper">
-                    <i class="fa-solid fa-chevron-up"></i>
+                    <span class="fa-solid fa-chevron-up" role="img"></span>
                 </div>
                 <input type="button" id="listbox-dropdown" name="listbox-dropdown" value="Sélectionner une option">
                 <div class="dropdown-menu">
@@ -81,14 +81,14 @@
         <div class="lightbox__modal">
             <div class="lightbox__content">
                 <div class="lightbox__content-close-btn" role="button" tabindex="0" aria-label="Fermer la boite de dialogue">
-                    <i class="fa-solid fa-xmark lightbox__content-close-btn--icon"></i>
+                    <span class="fa-solid fa-xmark lightbox__content-close-btn--icon" role="img"></span>
                 </div>
                 <div id="previousBtn" role="button" aria-label="Affichage du média précédent" tabindex="0">
-                    <i class="fa-solid fa-chevron-left"></i>
+                    <span class="fa-solid fa-chevron-left" role="img"></span>
                 </div>
                 <div class="lightbox__content-media"></div>
                 <div id="nextBtn" role="button" aria-label="Affichage du média suivant" tabindex="0">
-                    <i class="fa-solid fa-chevron-right"></i>
+                    <span class="fa-solid fa-chevron-right" role="img"></span>
                 </div>
             </div>
         </div>
