refactoring, fix lightbox's next and previous button not using the right arrayOfMedia when a filter is applied, rename functions and variables to more explicit name

--- a/photographer.html
+++ b/photographer.html
@@ -26,7 +26,7 @@
         <div class="photograph-header">
             <div class="photograph-header__content"></div>
             <button class="contact_button">Contactez-moi</button>
-            <div class="photograph-header__img"></div>
+            <div class="img-container"></div>
         </div>
         <div id="dropdown">
             <label for="listbox-dropdown">Trier par </label>
